Fix borders and padding on small pictures. Fix margins and corner radius on button.

--- a/style.css
+++ b/style.css
@@ -61,11 +61,12 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #3882F6;
     color:#f9faf8;
     font-weight: bold;
     padding:10px;
+    margin: 10px;
     width: 75px;
     height: 5px;
 }
@@ -89,20 +90,22 @@ a {
 .subheader {
     color:#1F2937;
     font-size: 36px;
-    font-weight: bolder;
+    font-weight:900;
+    padding: 20px;
 }
 
 .fourpic {
     display: flex;
     justify-content: center;
     padding: 10px;
-    gap: 5px;
+    gap: 25px;
 }
 
 .smallpic1, .smallpic2, .smallpic3, .smallpic4 {
     width: 200px;
     height: 200px;
-    border-color: #3882F6 3px;
+    border-color: #3882F6;
+    border-style: solid;
+    border-width: 3px;
     border-radius: 10px;
-
 }
